--- a/index.html
+++ b/index.html
@@ -53,117 +53,55 @@
                             17:53
                         </div>       
                     </div>
-                    <div class="contact">
-                        <div class="img-contact">
-                            <img src="https://raw.githubusercontent.com/Ashwinvalento/cartoon-avatar/master/lib/images/male/45.png" alt="avatar">
-                        </div>
-                        <div class="info-contact">
-                            <h3>Michele</h3>
-                            <p>Non poteva essere altrimenti</p>
-                        </div>
-                        <div class="time">
-                            17:53
-                        </div>       
-                    </div>
-                    <div class="contact">
-                        <div class="img-contact">
-                            <img src="https://raw.githubusercontent.com/Ashwinvalento/cartoon-avatar/master/lib/images/male/45.png" alt="avatar">
-                        </div>
-                        <div class="info-contact">
-                            <h3>Michele</h3>
-                            <p>Non poteva essere altrimenti</p>
-                        </div>
-                        <div class="time">
-                            17:53
-                        </div>       
-                    </div>
-                    <div class="contact">
-                        <div class="img-contact">
-                            <img src="https://raw.githubusercontent.com/Ashwinvalento/cartoon-avatar/master/lib/images/male/45.png" alt="avatar">
-                        </div>
-                        <div class="info-contact">
-                            <h3>Michele</h3>
-                            <p>Non poteva essere altrimenti</p>
-                        </div>
-                        <div class="time">
-                            17:53
-                        </div>       
-                    </div>
-                    <div class="contact">
-                        <div class="img-contact">
-                            <img src="https://raw.githubusercontent.com/Ashwinvalento/cartoon-avatar/master/lib/images/male/45.png" alt="avatar">
-                        </div>
-                        <div class="info-contact">
-                            <h3>Michele</h3>
-                            <p>Non poteva essere altrimenti</p>
-                        </div>
-                        <div class="time">
-                            17:53
-                        </div>       
-                    </div>
-                    <div class="contact">
-                        <div class="img-contact">
-                            <img src="https://raw.githubusercontent.com/Ashwinvalento/cartoon-avatar/master/lib/images/male/45.png" alt="avatar">
-                        </div>
-                        <div class="info-contact">
-                            <h3>Michele</h3>
-                            <p>Non poteva essere altrimenti</p>
-                        </div>
-                        <div class="time">
-                            17:53
-                        </div>       
-                    </div>
-                    <div class="contact">
-                        <div class="img-contact">
-                            <img src="https://raw.githubusercontent.com/Ashwinvalento/cartoon-avatar/master/lib/images/male/45.png" alt="avatar">
-                        </div>
-                        <div class="info-contact">
-                            <h3>Michele</h3>
-                            <p>Non poteva essere altrimenti</p>
-                        </div>
-                        <div class="time">
-                            17:53
-                        </div>       
-                    </div>
-                    <div class="contact">
-                        <div class="img-contact">
-                            <img src="https://raw.githubusercontent.com/Ashwinvalento/cartoon-avatar/master/lib/images/male/45.png" alt="avatar">
-                        </div>
-                        <div class="info-contact">
-                            <h3>Michele</h3>
-                            <p>Non poteva essere altrimenti</p>
-                        </div>
-                        <div class="time">
-                            17:53
-                        </div>       
-                    </div>
-                    <div class="contact">
-                        <div class="img-contact">
-                            <img src="https://raw.githubusercontent.com/Ashwinvalento/cartoon-avatar/master/lib/images/male/45.png" alt="avatar">
-                        </div>
-                        <div class="info-contact">
-                            <h3>Michele</h3>
-                            <p>Non poteva essere altrimenti</p>
-                        </div>
-                        <div class="time">
-                            17:53
-                        </div>       
-                    </div>
-                    <div class="contact">
-                        <div class="img-contact">
-                            <img src="https://raw.githubusercontent.com/Ashwinvalento/cartoon-avatar/master/lib/images/male/45.png" alt="avatar">
-                        </div>
-                        <div class="info-contact">
-                            <h3>Michele</h3>
-                            <p>Non poteva essere altrimenti</p>
-                        </div>
-                        <div class="time">
-                            17:53
-                        </div>       
-                    </div>
+                    
                 </div>
             </aside>
-            <section></section>
+            <section>
+                <div class="messaging-info">
+                    <div class="left-mess-info">
+                        <div class="contacted-img">
+                            <img src="https://raw.githubusercontent.com/Ashwinvalento/cartoon-avatar/master/lib/images/male/45.png" alt="avatar">
+                        </div>
+                        <div class="contacted-info">
+                            <h3>Michele</h3>
+                            <p>Ultimo accesso oggi alle 15:40</p>
+                        </div>     
+                    </div>
+                    <div class="right-mess-info">
+                        <ul>
+                            <li><i class="fas fa-search"></i></li>
+                            <li><i class="fas fa-paperclip"></i></li>
+                            <li><i class="fas fa-ellipsis-v"></i></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="messages-table clearfix">
+                    <div class="received">
+                        <div class="message-received">
+                            Come va tutto bene?
+                            <span>05:46</span>
+                        </div>
+                    </div>
+                    <div class="sended">
+                        <div class="message-sended">
+                            che dobbiamo fare,tiriamo avanti!
+                            <span>05:47</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="messages-texting">
+                    <div class="icons">
+                        <i class="far fa-smile"></i>
+                    </div>
+                    <div class="texting">
+                        <input type="text" name="" id="" placeholder="Scrivi un messaggio" >
+                    </div>
+                    <div class="send">
+                        <i class="fas fa-paper-plane"></i>
+                    </div>
+                </div>
+
+            </section>
         </div>
     </div>
 
