Complete (for today(

--- a/index.html
+++ b/index.html
@@ -53,7 +53,90 @@
                             17:53
                         </div>       
                     </div>
-                    
+                    <div class="contact">
+                        <div class="img-contact">
+                            <img src="https://raw.githubusercontent.com/Ashwinvalento/cartoon-avatar/master/lib/images/male/45.png" alt="avatar">
+                        </div>
+                        <div class="info-contact">
+                            <h3>Michele</h3>
+                            <p>Non poteva essere altrimenti</p>
+                        </div>
+                        <div class="time">
+                            17:53
+                        </div>       
+                    </div>
+                    <div class="contact">
+                        <div class="img-contact">
+                            <img src="https://raw.githubusercontent.com/Ashwinvalento/cartoon-avatar/master/lib/images/male/45.png" alt="avatar">
+                        </div>
+                        <div class="info-contact">
+                            <h3>Michele</h3>
+                            <p>Non poteva essere altrimenti</p>
+                        </div>
+                        <div class="time">
+                            17:53
+                        </div>       
+                    </div>
+                    <div class="contact">
+                        <div class="img-contact">
+                            <img src="https://raw.githubusercontent.com/Ashwinvalento/cartoon-avatar/master/lib/images/male/45.png" alt="avatar">
+                        </div>
+                        <div class="info-contact">
+                            <h3>Michele</h3>
+                            <p>Non poteva essere altrimenti</p>
+                        </div>
+                        <div class="time">
+                            17:53
+                        </div>       
+                    </div>
+                    <div class="contact">
+                        <div class="img-contact">
+                            <img src="https://raw.githubusercontent.com/Ashwinvalento/cartoon-avatar/master/lib/images/male/45.png" alt="avatar">
+                        </div>
+                        <div class="info-contact">
+                            <h3>Michele</h3>
+                            <p>Non poteva essere altrimenti</p>
+                        </div>
+                        <div class="time">
+                            17:53
+                        </div>       
+                    </div>
+                    <div class="contact">
+                        <div class="img-contact">
+                            <img src="https://raw.githubusercontent.com/Ashwinvalento/cartoon-avatar/master/lib/images/male/45.png" alt="avatar">
+                        </div>
+                        <div class="info-contact">
+                            <h3>Michele</h3>
+                            <p>Non poteva essere altrimenti</p>
+                        </div>
+                        <div class="time">
+                            17:53
+                        </div>       
+                    </div>
+                    <div class="contact">
+                        <div class="img-contact">
+                            <img src="https://raw.githubusercontent.com/Ashwinvalento/cartoon-avatar/master/lib/images/male/45.png" alt="avatar">
+                        </div>
+                        <div class="info-contact">
+                            <h3>Michele</h3>
+                            <p>Non poteva essere altrimenti</p>
+                        </div>
+                        <div class="time">
+                            17:53
+                        </div>       
+                    </div>
+                    <div class="contact">
+                        <div class="img-contact">
+                            <img src="https://raw.githubusercontent.com/Ashwinvalento/cartoon-avatar/master/lib/images/male/45.png" alt="avatar">
+                        </div>
+                        <div class="info-contact">
+                            <h3>Michele</h3>
+                            <p>Non poteva essere altrimenti</p>
+                        </div>
+                        <div class="time">
+                            17:53
+                        </div>       
+                    </div>               
                 </div>
             </aside>
             <section>
@@ -76,6 +159,54 @@
                     </div>
                 </div>
                 <div class="messages-table clearfix">
+                    <div class="received">
+                        <div class="message-received">
+                            Come va tutto bene?
+                            <span>05:46</span>
+                        </div>
+                    </div>
+                    <div class="sended">
+                        <div class="message-sended">
+                            che dobbiamo fare,tiriamo avanti!
+                            <span>05:47</span>
+                        </div>
+                    </div>
+                    <div class="received">
+                        <div class="message-received">
+                            Come va tutto bene?
+                            <span>05:46</span>
+                        </div>
+                    </div>
+                    <div class="sended">
+                        <div class="message-sended">
+                            che dobbiamo fare,tiriamo avanti!
+                            <span>05:47</span>
+                        </div>
+                    </div>
+                    <div class="received">
+                        <div class="message-received">
+                            Come va tutto bene?
+                            <span>05:46</span>
+                        </div>
+                    </div>
+                    <div class="sended">
+                        <div class="message-sended">
+                            che dobbiamo fare,tiriamo avanti!
+                            <span>05:47</span>
+                        </div>
+                    </div>
+                    <div class="received">
+                        <div class="message-received">
+                            Come va tutto bene?
+                            <span>05:46</span>
+                        </div>
+                    </div>
+                    <div class="sended">
+                        <div class="message-sended">
+                            che dobbiamo fare,tiriamo avanti!
+                            <span>05:47</span>
+                        </div>
+                    </div>
                     <div class="received">
                         <div class="message-received">
                             Come va tutto bene?
