--- a/index.html
+++ b/index.html
@@ -159,65 +159,13 @@
                     </div>
                 </div>
                 <div class="messages-table clearfix">
-                    <div class="received">
-                        <div class="message-received">
-                            Come va tutto bene?
-                            <span>05:46</span>
-                        </div>
+                    <div class="message sent">
+                        Ehi! chi sei?
+                        <span>05:47</span>
                     </div>
-                    <div class="sended">
-                        <div class="message-sended">
-                            che dobbiamo fare,tiriamo avanti!
-                            <span>05:47</span>
-                        </div>
-                    </div>
-                    <div class="received">
-                        <div class="message-received">
-                            Come va tutto bene?
-                            <span>05:46</span>
-                        </div>
-                    </div>
-                    <div class="sended">
-                        <div class="message-sended">
-                            che dobbiamo fare,tiriamo avanti!
-                            <span>05:47</span>
-                        </div>
-                    </div>
-                    <div class="received">
-                        <div class="message-received">
-                            Come va tutto bene?
-                            <span>05:46</span>
-                        </div>
-                    </div>
-                    <div class="sended">
-                        <div class="message-sended">
-                            che dobbiamo fare,tiriamo avanti!
-                            <span>05:47</span>
-                        </div>
-                    </div>
-                    <div class="received">
-                        <div class="message-received">
-                            Come va tutto bene?
-                            <span>05:46</span>
-                        </div>
-                    </div>
-                    <div class="sended">
-                        <div class="message-sended">
-                            che dobbiamo fare,tiriamo avanti!
-                            <span>05:47</span>
-                        </div>
-                    </div>
-                    <div class="received">
-                        <div class="message-received">
-                            Come va tutto bene?
-                            <span>05:46</span>
-                        </div>
-                    </div>
-                    <div class="sended">
-                        <div class="message-sended">
-                            che dobbiamo fare,tiriamo avanti!
-                            <span>05:47</span>
-                        </div>
+                    <div class="message received">
+                        Sono il tuo Bot personale,chiedimi pure qualcosa.
+                        <span>05:46</span>
                     </div>
                 </div>
                 <div class="messages-texting">
@@ -225,14 +173,21 @@
                         <i class="far fa-smile"></i>
                     </div>
                     <div class="texting">
-                        <input type="text" name="" id="" placeholder="Scrivi un messaggio" >
+                        <input type="text" name="" id="testo" placeholder="Scrivi un messaggio" >
                     </div>
-                    <div class="send">
+                    <div class="send-button">
                         <i class="fas fa-paper-plane"></i>
                     </div>
                 </div>
 
             </section>
+
+            <div class="cloning">
+                <div class="message">
+                    Sono il tuo Bot personale,chiedimi pure qualcosa.
+                    <span>05:46</span>
+                </div>
+            </div>
         </div>
     </div>
 
