--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
                     <input type="search" name="" id="" placeholder="Cerca o inizia una nuova chat">
                 </div>
                 <div class="contacts" id="contacts">
-                    <div class="contact">
+                    <div class="contact active">
                         <div class="img-contact">
-                            <img src="https://raw.githubusercontent.com/Ashwinvalento/cartoon-avatar/master/lib/images/male/45.png" alt="avatar">
+                            <img src="https://images.unsplash.com/photo-1595939152815-39e7ff7dbc76?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="avatar">
                         </div>
                         <div class="info-contact">
-                            <h3>Michele</h3>
+                            <h3>Francesco</h3>
                             <p>Non poteva essere altrimenti</p>
                         </div>
                         <div class="time">
@@ -55,88 +55,40 @@
                     </div>
                     <div class="contact">
                         <div class="img-contact">
-                            <img src="https://raw.githubusercontent.com/Ashwinvalento/cartoon-avatar/master/lib/images/male/45.png" alt="avatar">
+                            <img src="https://images.unsplash.com/photo-1595939152851-d1c3d6c39623?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="avatar">
                         </div>
                         <div class="info-contact">
-                            <h3>Michele</h3>
+                            <h3>Paolo</h3>
                             <p>Non poteva essere altrimenti</p>
                         </div>
                         <div class="time">
                             17:53
                         </div>       
-                    </div>
+                    </div>   
                     <div class="contact">
                         <div class="img-contact">
-                            <img src="https://raw.githubusercontent.com/Ashwinvalento/cartoon-avatar/master/lib/images/male/45.png" alt="avatar">
+                            <img src="https://images.unsplash.com/photo-1595957247630-8c9a778aa719?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="avatar">
                         </div>
                         <div class="info-contact">
-                            <h3>Michele</h3>
+                            <h3>Francesca</h3>
                             <p>Non poteva essere altrimenti</p>
                         </div>
                         <div class="time">
                             17:53
                         </div>       
-                    </div>
+                    </div>   
                     <div class="contact">
                         <div class="img-contact">
-                            <img src="https://raw.githubusercontent.com/Ashwinvalento/cartoon-avatar/master/lib/images/male/45.png" alt="avatar">
+                            <img src="https://images.unsplash.com/photo-1595923267353-fad376f5b3fd?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="avatar">
                         </div>
                         <div class="info-contact">
-                            <h3>Michele</h3>
+                            <h3>Paola</h3>
                             <p>Non poteva essere altrimenti</p>
                         </div>
                         <div class="time">
                             17:53
                         </div>       
-                    </div>
-                    <div class="contact">
-                        <div class="img-contact">
-                            <img src="https://raw.githubusercontent.com/Ashwinvalento/cartoon-avatar/master/lib/images/male/45.png" alt="avatar">
-                        </div>
-                        <div class="info-contact">
-                            <h3>Michele</h3>
-                            <p>Non poteva essere altrimenti</p>
-                        </div>
-                        <div class="time">
-                            17:53
-                        </div>       
-                    </div>
-                    <div class="contact">
-                        <div class="img-contact">
-                            <img src="https://raw.githubusercontent.com/Ashwinvalento/cartoon-avatar/master/lib/images/male/45.png" alt="avatar">
-                        </div>
-                        <div class="info-contact">
-                            <h3>Michele</h3>
-                            <p>Non poteva essere altrimenti</p>
-                        </div>
-                        <div class="time">
-                            17:53
-                        </div>       
-                    </div>
-                    <div class="contact">
-                        <div class="img-contact">
-                            <img src="https://raw.githubusercontent.com/Ashwinvalento/cartoon-avatar/master/lib/images/male/45.png" alt="avatar">
-                        </div>
-                        <div class="info-contact">
-                            <h3>Michele</h3>
-                            <p>Non poteva essere altrimenti</p>
-                        </div>
-                        <div class="time">
-                            17:53
-                        </div>       
-                    </div>
-                    <div class="contact">
-                        <div class="img-contact">
-                            <img src="https://raw.githubusercontent.com/Ashwinvalento/cartoon-avatar/master/lib/images/male/45.png" alt="avatar">
-                        </div>
-                        <div class="info-contact">
-                            <h3>Michele</h3>
-                            <p>Non poteva essere altrimenti</p>
-                        </div>
-                        <div class="time">
-                            17:53
-                        </div>       
-                    </div>               
+                    </div>            
                 </div>
             </aside>
             <section>
@@ -158,7 +110,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="messages-table clearfix">
+                <div class="messages-table active clearfix">
                     <div class="message sent">
                         Ehi! chi sei?
                         <span>05:47</span>
@@ -179,6 +131,9 @@
                         <i class="fas fa-paper-plane"></i>
                     </div>
                 </div>
+                <div class="messages-table active clearfix"></div>
+                <div class="messages-table active clearfix"></div>
+                <div class="messages-table active clearfix"></div>
 
             </section>
 
