--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@
                 <div class="messaging-info">
                     <div class="left-mess-info">
                         <div class="contacted-img">
-                            <img src="https://raw.githubusercontent.com/Ashwinvalento/cartoon-avatar/master/lib/images/male/45.png" alt="avatar">
+                            <img src="https://images.unsplash.com/photo-1595939152815-39e7ff7dbc76?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="avatar">
                         </div>
                         <div class="contacted-info">
-                            <h3>Michele</h3>
+                            <h3>Francesco</h3>
                             
                         </div>     
                     </div>
