--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="https://image.winudf.com/v2/image/Y29tLndoYXRzYXBwLnc0Yl9pY29uXzE1MDc3NTUwMThfMDYz/icon.png?w=170&fakeurl=1&type=.png" />
-    <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@300;400;700&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -34,7 +34,7 @@
                     <div class="text-notif">
                         <p>Ricevi notifiche di nuovi messaggi</p>
                         <p><a href="#">Attiva notifiche desktop</a></p>
-                    </div> 
+                    </div>
                 </div>
                 <div class="search-bar-aside">
                     <i class="fas fa-search"></i>
@@ -51,7 +51,7 @@
                         </div>
                         <div class="time">
                             17:53
-                        </div>       
+                        </div>
                     </div>
                     <div class="contact">
                         <div class="img-contact">
@@ -63,8 +63,8 @@
                         </div>
                         <div class="time">
                             17:53
-                        </div>       
-                    </div>   
+                        </div>
+                    </div>
                     <div class="contact">
                         <div class="img-contact">
                             <img src="https://images.unsplash.com/photo-1595957247630-8c9a778aa719?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="avatar">
@@ -75,8 +75,8 @@
                         </div>
                         <div class="time">
                             17:53
-                        </div>       
-                    </div>   
+                        </div>
+                    </div>
                     <div class="contact">
                         <div class="img-contact">
                             <img src="https://images.unsplash.com/photo-1595923267353-fad376f5b3fd?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="avatar">
@@ -87,8 +87,8 @@
                         </div>
                         <div class="time">
                             17:53
-                        </div>       
-                    </div>            
+                        </div>
+                    </div>
                 </div>
             </aside>
             <section>
@@ -99,8 +99,8 @@
                         </div>
                         <div class="contacted-info">
                             <h3>Francesco</h3>
-                            
-                        </div>     
+
+                        </div>
                     </div>
                     <div class="right-mess-info">
                         <ul>
@@ -131,9 +131,9 @@
                         <i class="fas fa-paper-plane"></i>
                     </div>
                 </div>
-                <div class="messages-table active clearfix"></div>
-                <div class="messages-table active clearfix"></div>
-                <div class="messages-table active clearfix"></div>
+                <div class="messages-table clearfix"></div>
+                <div class="messages-table clearfix"></div>
+                <div class="messages-table clearfix"></div>
 
             </section>
 
