--- a/index.html
+++ b/index.html
@@ -120,6 +120,36 @@
                         <span>05:46</span>
                     </div>
                 </div>
+                <div class="messages-table clearfix">
+                    <div class="message sent">
+                        Ehi! chi sei?
+                        <span>05:47</span>
+                    </div>
+                    <div class="message received">
+                        Sono il tuo Bot personale,chiedimi pure qualcosa.
+                        <span>05:46</span>
+                    </div>
+                </div>
+                <div class="messages-table clearfix">
+                    <div class="message sent">
+                        Ehi! chi sei?
+                        <span>05:47</span>
+                    </div>
+                    <div class="message received">
+                        Sono il tuo Bot personale,chiedimi pure qualcosa.
+                        <span>05:46</span>
+                    </div>
+                </div>
+                <div class="messages-table clearfix">
+                    <div class="message sent">
+                        Ehi! chi sei?
+                        <span>05:47</span>
+                    </div>
+                    <div class="message received">
+                        Sono il tuo Bot personale,chiedimi pure qualcosa.
+                        <span>05:46</span>
+                    </div>
+                </div>
                 <div class="messages-texting">
                     <div class="icons">
                         <i class="far fa-smile"></i>
@@ -131,10 +161,6 @@
                         <i class="fas fa-paper-plane"></i>
                     </div>
                 </div>
-                <div class="messages-table clearfix"></div>
-                <div class="messages-table clearfix"></div>
-                <div class="messages-table clearfix"></div>
-
             </section>
 
             <div class="cloning">
