adding searching function

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </div>
                 <div class="search-bar-aside">
                     <i class="fas fa-search"></i>
-                    <input type="search" name="" id="" placeholder="Cerca o inizia una nuova chat">
+                    <input type="search" name="" id="searching" placeholder="Cerca o inizia una nuova chat">
                 </div>
                 <div class="contacts" id="contacts">
                     <div class="contact active">
@@ -46,7 +46,7 @@
                             <img src="https://images.unsplash.com/photo-1595939152815-39e7ff7dbc76?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="avatar">
                         </div>
                         <div class="info-contact">
-                            <h3>Francesco</h3>
+                            <h3 class='contact-name'>Francesco</h3>
                             <p>Non poteva essere altrimenti</p>
                         </div>
                         <div class="time">
@@ -58,7 +58,7 @@
                             <img src="https://images.unsplash.com/photo-1595939152851-d1c3d6c39623?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="avatar">
                         </div>
                         <div class="info-contact">
-                            <h3>Paolo</h3>
+                            <h3 class='contact-name'>Paolo</h3>
                             <p>Non poteva essere altrimenti</p>
                         </div>
                         <div class="time">
@@ -70,7 +70,7 @@
                             <img src="https://images.unsplash.com/photo-1595957247630-8c9a778aa719?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="avatar">
                         </div>
                         <div class="info-contact">
-                            <h3>Francesca</h3>
+                            <h3 class='contact-name'>Francesca</h3>
                             <p>Non poteva essere altrimenti</p>
                         </div>
                         <div class="time">
@@ -82,7 +82,7 @@
                             <img src="https://images.unsplash.com/photo-1595923267353-fad376f5b3fd?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="avatar">
                         </div>
                         <div class="info-contact">
-                            <h3>Paola</h3>
+                            <h3 class='contact-name'>Paola</h3>
                             <p>Non poteva essere altrimenti</p>
                         </div>
                         <div class="time">
